# sat-threat-detector-fprime

./: .gitignore  AppTopologyDefs.hpp  README.md
deployments/DetectorRB3/: CMakeLists.txt  settings.ini
deployments/DetectorRB3/Components/Detector/: CMakeLists.txt  Detector.fpp  Detector.hpp  DetectorComponentAi.cpp  DetectorComponentAi.hpp  DetectorComponentAi.xml  DetectorComponentImpl.cpp  DetectorComponentImpl.hpp
deployments/DetectorRB3/Top/: AppTopologyDefs.hpp  Topology.cpp  Topology.fpp  Topology.hpp  instances.fpp  main.cpp
deployments/DetectorRB3/config/: allowlist_opcodes.txt  feature_schema.csv
deployments/RefSat/: CMakeLists.txt
deployments/RefSat/Components/SatProto/: SatProtoComponentAi.cpp  SatProtoComponentAi.hpp  SatProtoComponentAi.xml
deployments/RefSat/Top/: Topology.cpp  Topology.hpp  main.cpp
standalone/: Makefile
standalone/include/: Calibrator.hpp  FeatureFrame.hpp  Forest.hpp  RuleGuard.hpp
standalone/src/: Calibrator.cpp  Forest.cpp  RuleGuard.cpp  detector_main.cpp
tools/scripts/: build_fprime.sh  common.sh  deploy_stub.sh  package_detector.sh  run_sim.sh  train.sh
tools/sim/: generator.py  sim_gen.py
tools/train/: exported_calibrator.cfg  exported_forest.model  train_forest.py
